[project]
name = "kocotree-skills-auth"
version = "0.1.0"
description = "Lightweight API key authentication service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1",
    "gunicorn>=23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kocotree_skills_auth"]
